--- a/win/vncconfig/vncconfig.rc
+++ b/win/vncconfig/vncconfig.rc
@@ -247,11 +247,17 @@ BEGIN
                     "Button",BS_AUTOCHECKBOX | WS_TABSTOP,15,30,155,14
     GROUPBOX        "When last client disconnects",IDC_STATIC,7,55,171,60
     CONTROL         "Do nothing",IDC_DISCONNECT_NONE,"Button",
-                    BS_AUTORADIOBUTTON,15,65,155,15
+                    BS_AUTORADIOBUTTON | WS_GROUP,15,65,155,15
     CONTROL         "Lock workstation",IDC_DISCONNECT_LOCK,"Button",
                     BS_AUTORADIOBUTTON,15,80,155,15
     CONTROL         "Logoff user",IDC_DISCONNECT_LOGOFF,"Button",
                     BS_AUTORADIOBUTTON,15,95,155,15
+    GROUPBOX        "Share Screens",IDC_STATIC,7,120,171,45
+    CONTROL         "All",IDC_SCREENS_ALL,"Button",
+                    BS_AUTORADIOBUTTON | WS_GROUP,15,130,155,15
+    CONTROL         "Share Display Number:",IDC_SCREENS_ONE,"Button",
+                    BS_AUTORADIOBUTTON,15,145,100,15
+    EDITTEXT        IDC_SCREENS_SHARE,125,145,35,15,ES_AUTOHSCROLL | ES_NUMBER
 END
 
 
