Fix linking to work with Windows 7.
Windows 10 kernel32 provides at least one function (CreateProcessAsUserA) that Windows 7 does not provide.  That function is provided by advapi32.  Linking advapi32 before kernel32 creates a binary that works with Windows 10 and Windows 7.

--- a/win/winvnc/CMakeLists.txt
+++ b/win/winvnc/CMakeLists.txt
@@ -1,5 +1,10 @@
 include_directories(${CMAKE_BINARY_DIR}/win ${CMAKE_CURRENT_SOURCE_DIR})
 
+# advapi32 needs to come before kernel32 in some cases for Windows 7 compatibility.
+#  Windows 10 kernel32.dll exports a reference to CreateProcessAsUserA whereas Windows 7 advapi32.dll is the only place that function is exported.
+#  Changing the order of the linked libraries allows the binary to be compatible with both versions.
+set(CMAKE_CXX_STANDARD_LIBRARIES "-ladvapi32 -lkernel32 -luser32 -lgdi32 -lwinspool -lshell32 -lole32 -loleaut32 -luuid -lcomdlg32" CACHE STRING "" FORCE)
+
 add_executable(winvnc4 WIN32
   buildTime.cxx
   ControlPanel.cxx
