--- a/common/rdr/CMakeLists.txt
+++ b/common/rdr/CMakeLists.txt
@@ -16,8 +16,14 @@ add_library(rdr STATIC
   ZlibOutStream.cxx)
 
 set(RDR_LIBRARIES ${ZLIB_LIBRARIES} os)
+if(WIN32 AND NOT BUILD_STATIC)
+  add_win_dll_dep(zlib1.dll)
+endif()
 if(GNUTLS_FOUND)
   set(RDR_LIBRARIES ${RDR_LIBRARIES} ${GNUTLS_LIBRARIES})
+  if(WIN32 AND NOT BUILD_STATIC)
+    add_win_dll_dep(libgnutls-30.dll)
+  endif()
 endif()
 if(WIN32)
 	set(RDR_LIBRARIES ${RDR_LIBRARIES} ws2_32)
